--- a/project-backend/src/main/resources/application.properties
+++ b/project-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5001
-spring.datasource.url=jdbc:postgresql://localhost:5432/Accenture
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/Accenture
+spring.datasource.username=root
 spring.datasource.password=abhilash
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
